styling for projects fixed for scrolling sideways on mobile

--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -195,7 +195,7 @@
   }
 
   .timeline-element-summary {
-    width: 90%;
+    width: 80%;
   }
 
   .timeline-content-details-container-grid {
